--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "template-spa",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "private": true,
   "main": "src/index.js",
   "scripts": {
-    "serve": "webpack serve -c @configs/webpack/webpack.dev.config.js",
+    "serve": "cross-env NODE_ENV=development webpack serve -c @configs/webpack/webpack.dev.config.js",
     "build": "cross-env NODE_ENV=production webpack -c @configs/webpack/webpack.build.config.js"
   },
   "dependencies": {
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
@@ -26,6 +27,8 @@
     "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
+    "vue-property-decorator": "^9.0.2",
+    "vue-class-component": "^7.2.6",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
